@@ -8,7 +8,7 @@
     <authorgroup>
       <author>
 	<firstname>Jeroen</firstname>
-	<othername>T.<othername>
+	<othername>T.</othername>
 	<surname>Vermeulen</surname>
 	<affiliation>
 	  <address>
@@ -19,11 +19,13 @@
     </authorgroup>
 
     <copyright>
-      <year>2002</year>--<year>2006</year>
+      <year>2002</year>
+      <year>2003</year>
+      <year>2004</year>
+      <year>2005</year>
+      <year>2006</year>
       <holder>
-        <firstname>Jeroen</firstname>
-	<othername>T.<othername>
-	<surname>Vermeulen</surname>
+        Jeroen T. Vermeulen
       </holder>
     </copyright>
   </bookinfo>
