@@ -1,3 +1,6 @@
+2006-05-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ doc/libpqxx.xml:
+  - Fixed bugs that caused validation to fail
 2006-05-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
  doc/libpqxx.xml:
   - Updated copyright string
